# convert2json

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  about.hbs  about.toml  convert2json.spec
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml
src/: csv.rs  jq.rs  json.rs  lib.rs  main.rs  seek.rs  string.rs  toml.rs  xml.rs  yaml.rs
