[package]
name = "convert2json"
description = "utilities converting various data formats into JSON for use with jq"
authors = ["Simon Rupf <simon@rupf.net>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["cli", "json", "toml", "xml", "yaml"]
categories = ["command-line-utilities", "development-tools", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["toml", "xml", "yaml"]
toml = ["toml2json", "tq"]
xml = ["xml2json", "xq"]
yaml = ["yaml2json", "yq"]
toml2json = []
tq = []
xml2json = []
xq = []
yaml2json = []
yq = []

[dependencies]
is-terminal = "0.4.7"
serde-xml-rs = "0.6.0"
serde_json = "1.0.99"
serde_yaml = "0.9.22"
toml = "0.7.5"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
strip = true
